# raytracer

./: .gitignore  CMakeLists.txt  New Text Document.txt  README.md
Assets/: lobster.xml  spheres.xml  spheres_mirror.xml
Assets/ton_Roosendaal_smooth_ply/: mesh_1.ply
Source/: Main.cpp  parser.cpp  tinyxml2.cpp
Source/Include/: camera.h  color.h  common.h  hittable.h  hittableList.h  material.h  parser.h  ray.h  scene_list.h  sphere.h  triangle.h  vec3.h
hw1/hw_text/: bmblogo.eps  hw1.tex  metulogo.eps
hw1/inputs/: other_dragon.xml  scienceTree_glass.xml  spheres.xml  spheres_mirror.xml
hw1/inputs/akif_uslu/: CREDITS.txt  berserker_smooth.xml  car_smooth_fixed.xml  low_poly_smooth.xml  ton_Roosendaal_smooth.xml  tower_smooth.xml  trex_smooth.xml  windmill_smooth.xml
hw1/inputs/akif_uslu/ton_Roosendaal_smooth_ply/: mesh_2.ply
hw1/inputs/akif_uslu/trex_smooth_ply/: mesh_1.ply  mesh_2.ply
hw1/inputs/deniz_sayin/: CREDITS.txt
hw1/support_files/: .simple.xml.swp  Makefile  parser.cpp  raytracer.cpp
linux_pack/: Makefile
linux_pack/Assets/: ton_Roosendaal_smooth.xml  two_spheres.xml
linux_pack/Assets/ton_Roosendaal_smooth_ply/: mesh_3.ply
linux_pack/Source/: Main.cpp  parser.cpp  tinyxml2.cpp
linux_pack/Source/Include/: color.h  common.h  hittable.h  material.h  point_light.h  scene_list.h  sphere.h
